objects/Holiday__c.object
<CustomObject>
    <fields>
        <fullName>All_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holidays declared under respective distributors.</description>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holidays</relationshipLabel>
        <relationshipName>Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recurring_Holiday__c</fullName>
        <label>Recurring Holiday</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>